Merged revisions 921942 via svnmerge from https://svn.apache.org/repos/asf/cxf/trunk
........
  r921942 | dkulp | 2010-03-11 12:11:30 -0500 (Thu, 11 Mar 2010) | 2 lines
  
  [CXF-2703] More issues with spaces in wsdl/jar locations
  Patch from Craig Tataryn applied
........


git-svn-id: https://svn.apache.org/repos/asf/cxf/branches/2.2.x-fixes@921946 13f79535-47bb-0310-9956-ffa450edef68